@@ -1,11 +1,11 @@
 /*
- * Copyright 2024-2024 Pavel Ponec
+ * Copyright 2024-2026 Pavel Ponec
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,6 +16,7 @@
 package org.ujorm.tools.common;
 
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 import java.io.Serializable;
 import java.util.*;
@@ -24,45 +25,50 @@ import java.util.stream.Stream;
 /**
  * Methods to manage object arrays.
  *
- * <h3>Usage</h3>
+ * <h4>Usage</h4>
  * <pre class="pre">
  *   Array<Character> array = Array.of('A', 'B', 'C', 'D', 'E');
- *   array.getFirst().orElse(undef);
- *   array.getLast().orElse(undef);
- *   array.getItem(9).orElse(undef);
- *   array.getItem(-2).orElse(undef);
+ *   array.findFirst().orElse(undef);
+ *   array.findLast().orElse(undef);
+ *   array.getOptional(9).orElse(undef);
+ *   array.getOptional(-2).orElse(undef);
  *   array.removeFirst();
  *   array.join('P', 'C')
  * </pre>
  *
  * @author Pavel Ponec
  */
-public class Array<T> implements Serializable {
+public final class Array<T> implements Serializable, Iterable<T> {
 
-    protected final T[] array;
+    @NotNull
+    private final T[] array;
 
-    protected Array(@NotNull final T[] array) {
+    /** Internal constructor */
+    private Array(@NotNull final T[] array) {
         this.array = array;
     }
 
-    @NotNull
-    public final Array<T> clone() {
-        return new Array<>(toArray());
+    /** Copy constructor */
+    public Array(@NotNull final Array<T> source) {
+        this(source.toArray());
     }
 
+    /** Create a shallow copy of the object */
+    @NotNull
+    public Array<T> copy() {
+        return new Array<>(this);
+    }
+
+    /** Create a new array and copy all items */
     @SuppressWarnings("unchecked")
     @NotNull
     public T[] toArray() {
-        final Class<T> type = (Class<T>) array.getClass().getComponentType();
-        @SuppressWarnings("unchecked")
-        final T[] result = (T[]) java.lang.reflect.Array.newInstance(type, array.length);
-        System.arraycopy(array, 0, result, 0, array.length);
-        return result;
+        return array.clone();
     }
 
     @NotNull
     public List<T> toList() {
-        return Arrays.asList(array);
+        return List.of(array);
     }
 
     @NotNull
@@ -70,45 +76,83 @@ public class Array<T> implements Serializable {
         return Stream.of(array);
     }
 
+    /** Returns an iterator over elements of type T */
+    @NotNull
+    @Override
+    public Iterator<T> iterator() {
+        return new Itr();
+    }
+
     /** Negative index value is supported, the index out of the range returns the {@code null} value. */
     @NotNull
-    public Optional<T> get(final int i) {
-        final int j = i >= 0 ? i : array.length + i;
+    public Optional<T> getOptional(final int i) {
+        var j = i >= 0 ? i : array.length + i;
         return Optional.ofNullable(j >= 0 && j < array.length ? array[j] : null);
     }
 
+    /** No validations for the best performance */
+    @Nullable
+    public T get(final int i) {
+        return array[i];
+    }
+
     /** Negative index is supported */
-    public T getItem(final int i) {
+    public T getValue(final int i) {
         return array[i >= 0 ? i : array.length + i];
     }
 
     @NotNull
-    public Optional<T> getFirst() {
-        return get(0);
+    public Optional<T> findFirst() {
+        return getOptional(0);
+    }
+
+    /** No validations for the best performance */
+    @Nullable
+    public T getFirst() {
+        return array[0];
+    }
+
+    /** No validations for the best performance */
+    @Nullable
+    public T getFirst(@Nullable T defaultValue) {
+        return array.length > 0 ? array[0] : defaultValue;
     }
 
     @NotNull
-    public Optional<T> getLast() {
-        return get(-1);
+    public Optional<T> findLast() {
+        return getOptional(-1);
+    }
+
+    /** No validations for the best performance */
+    @Nullable
+    public T getLast(@Nullable T defaultValue) {
+        return array.length > 0 ? array[array.length - 1] : defaultValue;
+    }
+
+    /** No validations for the best performance */
+    @Nullable
+    public T getLast() {
+        return array[array.length - 1];
     }
 
     public Array<T> removeFirst() {
-        final T[] result = array.length > 0 ? Arrays.copyOfRange(array, 1, array.length) : array;
+        var result = array.length > 0 ? Arrays.copyOfRange(array, 1, array.length) : array;
         return new Array<>(result);
     }
 
     /** @param from Negative value is supported */
     @NotNull
     public Array<T> subArray(final int from) {
-        final int from2 = from < 0 ? array.length - from : from;
-        final T[] result = Arrays.copyOfRange(array, Math.min(from2, array.length), array.length);
-        return new Array<>(result);
+        var from2 = from < 0 ? array.length + from : from;
+        var startIndex = Math.max(0, Math.min(from2, array.length));
+        return startIndex == 0 ? this : new Array<>(Arrays.copyOfRange(array, startIndex, array.length));
     }
 
     /** Add new items to the new Array */
+    @SafeVarargs
     @NotNull
-    public Array<T> add(@NotNull final T... toAdd) {
-        final T[] result = Arrays.copyOf(array, array.length + toAdd.length);
+    public final Array<T> add(@NotNull final T... toAdd) {
+        var result = Arrays.copyOf(array, array.length + toAdd.length);
         System.arraycopy(toAdd, 0, result, array.length, toAdd.length);
         return new Array<>(result);
     }
@@ -133,21 +177,56 @@ public class Array<T> implements Serializable {
     }
 
     @Override
-    public boolean equals(@NotNull final Object obj) {
-        return (obj instanceof Array) && Arrays.equals(array, ((Array) obj).array);
+    public boolean equals(@Nullable final Object obj) {
+        return (obj instanceof Array) && Arrays.equals(array, ((Array<?>) obj).array);
     }
 
     @NotNull
     @Override
     public String toString() {
-        return Arrays.asList(array).toString();
+        return Arrays.toString(array);
+    }
+
+    /** An optimized iterator */
+    private class Itr implements Iterator<T> {
+        /** Index of element to be returned by subsequent call to next */
+        private int index = 0;
+
+        @Override
+        public boolean hasNext() {
+            return index != array.length;
+        }
+
+        @Override
+        public T next() {
+            if (index >= array.length) {
+                throw new NoSuchElementException();
+            }
+            return array[index++];
+        }
     }
 
     /** Factory method */
-    @SuppressWarnings("unchecked")
+    @SafeVarargs
     @NotNull
-    public static <T> Array<T> of(@NotNull final T... chars) {
-        return new Array<T>(chars);
+    public static <T> Array<T> of(@NotNull final T... items) {
+        return new Array<>(items);
     }
 
+    /**
+     * Factory method creating an immutable snapshot of the provided collection
+     * with a runtime-typed backing array.
+     */
+    @SuppressWarnings("unchecked")
+    @NotNull
+    public static <T> Array<T> of(@NotNull final Collection<? extends T> items, @NotNull final Class<T> type) {
+        final T[] result = (T[]) java.lang.reflect.Array.newInstance(type, items.size());
+        return new Array<>(items.toArray(result));
+    }
+
+    /** Converts the value safely to an Object Array to prevent varargs method resolution issues. */
+    @SuppressWarnings("unchecked")
+    public static Array<Object> ofObject(Object value) {
+        return value instanceof Array<?> ar ? (Array<Object>) ar : Array.of(value);
+    }
 }
